--- a/common.css
+++ b/common.css
@@ -9,12 +9,12 @@ body {
     font-weight: 300;
     margin: 0;
     height: 100vh;
-    color: #28303E;
-    background-color: #ECF6FE;
+    color: #aaa;
+    background-color: #33333a;
 }
 
 .main {
-    background-color: #fefefe;
+    background-color: #44444a;
     min-height: 100%;
     width: 80%;
     position: relative;
@@ -24,7 +24,7 @@ body {
 }
 
 .main h1 {
-    text-shadow: 3px 2px #B9E6FF;
+    text-shadow: 3px 2px #55555a;
     position: relative;
     margin: 40px 0;
 }
@@ -37,7 +37,7 @@ body {
     right: 50px;
     height: 2px;
     background-color: #ddd;
-    box-shadow: 0 4px #B9E6FF;
+    box-shadow: 0 4px #55555a;
 }
 
 .main h1 a {
@@ -92,14 +92,14 @@ body {
 }
 
 .main code {
-    color: #373;
+    color: rgb(114, 196, 114);
 }
 
 .main pre:has(code) {
-    border: 2px solid #ddd;
+    border: 2px solid #575757;
     border-radius: 10px;
     padding: 20px;
-    background-color: #eee;
+    background-color: #4d4d4f;
     margin: 0 30px;
     position: relative;
 }
@@ -117,7 +117,7 @@ body {
 
 .nav {
     font-weight: 500;
-    background-color: #B9E6FFE0;
+    background-color: #55555aE0;
     backdrop-filter: blur(3px);
     padding: 15px 20px;
     display: flex;
@@ -134,14 +134,7 @@ body {
 
 .nav.expanded {
     height: 150px;
-}
-
-.nav.expanded h1 .name {
-    font-size: 2rem;
-}
-
-.nav.expanded h1 svg {
-    height: 2rem;
+    font-size: 1.5rem;
 }
 
 .nav:not(.expanded) .tagline {
@@ -149,7 +142,7 @@ body {
 }
 
 .nav h1 {
-    color: #374A67;
+    color: #757679;
     text-shadow: 3px 2px #0002;
     font-weight: 800;
     margin: 0;
@@ -158,21 +151,32 @@ body {
     align-items: center;
 }
 
-.nav h1 svg {
+.nav h1 img {
     grid-row: 1;
-    height: 1rem;
+    height: 2em;
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: 0 100%;
+    border-radius: 50%;
     filter: drop-shadow(3px 2px #0002);
 }
 
-.nav h1 .name {
+.nav h1 div {
     grid-row: 1;
+    grid-column: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.nav h1 .name {
+    display: block;
+    margin: 0;
+    font-size: 1em;
 }
 
 .nav h1 .tagline {
-    grid-row: 2;
-    grid-column: 2;
-    margin-top: -5px;
-    font-size: 0.6em;
+    font-size: 0.5em;
 }
 
 .nav-links {
@@ -183,6 +187,7 @@ body {
     display: flex;
     gap: 5px;
     transition: none;
+    font-size: 1rem;
 }
 
 .ham {
@@ -201,7 +206,7 @@ body {
 
 .ham i {
     display: block;
-    background-color: #374A67;
+    background-color: #757679;
     width: 100%;
     height: 5px;
     transform-origin: 2.5px 50%;
@@ -235,7 +240,7 @@ body {
     .nav-links {
         flex-direction: column;
         gap: 15px;
-        background-color: #63ADF2;
+        background-color: #444c53;
         padding: 20px;
         box-sizing: border-box;
         width: 100vw;
@@ -260,18 +265,18 @@ body {
 }
 
 .nav a {
-    color: #000;
+    color: #aaaaaf;
     text-decoration: none;
     padding: 5px 15px;
     border-radius: 1000px;
 }
 
 .nav a:hover {
-    background-color: #F6BD60;
+    background-color: #966515;
 }
 
 .footer {
-    background-color: #B9E6FFE0;
+    background-color: #55555aE0;
     padding: 15px 20px;
     width: 100vw;
     box-sizing: border-box;
