Highlight.js styling

--- a/common.css
+++ b/common.css
@@ -107,18 +107,18 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--code-color);
 }
 
-.main pre:has(code) {
+pre code.hljs {
     border: 2px solid #575757;
     border-radius: 10px;
-    padding: 20px;
-    background-color: #4d4d4f;
+    /* padding: 20px;
+    background-color: #4d4d4f; */
     margin: 0 30px;
     position: relative;
 }
 
-.hjls {
+/* .hjls {
     background: transparent !important;
-}
+} */
 
 .main pre:has(code) button {
     top: 20px;
