--- a/common.css
+++ b/common.css
@@ -110,8 +110,8 @@ h1, h2, h3, h4, h5, h6 {
 pre code.hljs {
     /* border: 2px solid #575757; */
     border-radius: 10px;
-    /* padding: 20px;
-    background-color: #4d4d4f;
+    padding: 20px;
+    /* background-color: #4d4d4f;
     margin: 0 30px; */
     position: relative;
 }
@@ -121,7 +121,6 @@ pre code.hljs {
 } */
 
 .main pre:has(code) button {
-    z-index: 99;
     top: 20px;
     right: 20px;
     position: absolute;
