--- a/common.css
+++ b/common.css
@@ -7,7 +7,7 @@
     --text-color: #aaa;
     --dark-text-color: #55555a;
     --link-color: #63ADF2;
-    --code-color: rgb(114, 196, 114);
+    --code-color: #aaa /* rgb(114, 196, 114) */;
     --accent-color: #b68515;
     --nav-color:  #55555ae0; //#233243e0;
 }
